--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "backend:ecount:start": "node \"ecount api/ecount-zone-api-backend.js\""
   },
   "dependencies": {
-    "csv-parse": "^5.5.5",
-    "iconv-lite": "^0.6.3",
-    "xlsx": "^0.18.5",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.21.2",
+    "iconv-lite": "^0.6.3",
+    "multer": "^2.0.2",
+    "xlsx": "^0.18.5"
   }
 }
